refactor(entry): main.jsをmain.tsに移行しコメントを日本語化

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         document.documentElement.classList.add('dark');
       }
     </script>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/main.ts"></script>
   </head>
 
   <body class="h-full bg-white dark:bg-[#0D1117] text-zinc-900 dark:text-zinc-100 overflow-hidden">
