--- a/index.html
+++ b/index.html
@@ -435,11 +435,24 @@
             <div class="relative group">
               <label for="share-preview"
                 class="block text-sm font-medium text-slate-700 dark:text-slate-300 mb-2">Preview & Copy</label>
+
+              <!-- Embed Preview Container (Hidden by default) -->
+              <div id="share-embed-preview-container"
+                class="hidden mb-3 border border-slate-200 dark:border-white/10 rounded-md overflow-hidden bg-slate-100 dark:bg-black/20">
+                <div
+                  class="px-3 py-1 bg-slate-200 dark:bg-white/5 text-xs text-slate-500 dark:text-slate-400 border-b border-slate-300 dark:border-white/10">
+                  Preview
+                </div>
+                <div id="share-embed-frame-wrapper" class="w-full h-40">
+                  <!-- iframe will be injected here -->
+                </div>
+              </div>
+
               <textarea id="share-preview" readonly
                 class="w-full h-32 p-3 text-sm font-mono bg-slate-50 dark:bg-black/20 border border-slate-200 dark:border-white/10 rounded-md focus:ring-2 focus:ring-blue-500 focus:border-blue-500 resize-none text-slate-600 dark:text-slate-300"></textarea>
 
               <button id="share-copy-btn"
-                class="absolute bottom-3 right-3 inline-flex items-center gap-2 px-3 py-1.5 text-xs font-medium text-white bg-blue-600 hover:bg-blue-700 rounded-md transition-colors shadow-sm focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 dark:focus:ring-offset-[#161b22]">
+                class="absolute bottom-3 right-6 inline-flex items-center gap-2 px-3 py-1.5 text-xs font-medium text-white bg-blue-600 hover:bg-blue-700 rounded-md transition-colors shadow-sm focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 dark:focus:ring-offset-[#161b22]">
                 <svg class="w-3 h-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                     d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z">
