feat(ui): モーダルを画面中央に表示するように修正

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 
         <!-- Settings Modal (Expanded from loop) -->
         <dialog id="settings-modal"
-          class="backdrop:bg-gray-900/50 dark:backdrop:bg-black/70 rounded-lg shadow-xl p-0 w-full max-w-lg bg-white dark:bg-[#161b22] dark:text-zinc-100">
+          class="m-auto backdrop:bg-gray-900/50 dark:backdrop:bg-black/70 rounded-lg shadow-xl p-0 w-full max-w-lg bg-white dark:bg-[#161b22] dark:text-zinc-100">
           <div class="flex items-center justify-between px-6 py-4 border-b border-slate-200 dark:border-white/10">
             <h3 class="text-lg font-semibold text-slate-900 dark:text-white">Editor Settings</h3>
             <form method="dialog">
@@ -319,7 +319,7 @@
 
         <!-- About Modal -->
         <dialog id="about-modal"
-          class="backdrop:bg-gray-900/50 dark:backdrop:bg-black/70 rounded-lg shadow-xl p-0 w-full max-w-lg bg-white dark:bg-[#161b22] dark:text-zinc-100">
+          class="m-auto backdrop:bg-gray-900/50 dark:backdrop:bg-black/70 rounded-lg shadow-xl p-0 w-full max-w-lg bg-white dark:bg-[#161b22] dark:text-zinc-100">
           <div class="flex items-center justify-between px-6 py-4 border-b border-slate-200 dark:border-white/10">
             <h3 class="text-lg font-semibold text-slate-900 dark:text-white">About RubPad</h3>
             <form method="dialog">
@@ -406,7 +406,7 @@
 
         <!-- Share Modal -->
         <dialog id="share-modal"
-          class="backdrop:bg-gray-900/50 dark:backdrop:bg-black/70 rounded-lg shadow-xl p-0 w-full max-w-lg bg-white dark:bg-[#161b22] dark:text-zinc-100">
+          class="m-auto backdrop:bg-gray-900/50 dark:backdrop:bg-black/70 rounded-lg shadow-xl p-0 w-full max-w-lg bg-white dark:bg-[#161b22] dark:text-zinc-100">
           <div class="flex items-center justify-between px-6 py-4 border-b border-slate-200 dark:border-white/10">
             <h3 class="text-lg font-semibold text-slate-900 dark:text-white">Share Code</h3>
             <form method="dialog">
