リリース準備: OGP設定、PWAマニフェスト追加

--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
     <link rel="icon" href="/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="/icon.png">
 
+    <!-- OGP / SEO -->
+    <meta property="og:title" content="Rubbit - Frontend Ruby Playground">
+    <meta property="og:description"
+      content="Run Ruby code instantly in your browser with WebAssembly. Create, share, and embed code snippets without any server setup.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://rubbit.dev/">
+    <meta property="og:image" content="https://rubbit.dev/ogp.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="description"
+      content="Rubbit is a serverless Ruby playground running entirely in the browser using WebAssembly. Write, run, and share Ruby snippets easily.">
+    <link rel="manifest" href="/manifest.json">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
