--- a/embed.html
+++ b/embed.html
@@ -6,6 +6,13 @@
     <title>Rubbit Embed</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
+    <!-- OGP / SEO (Embed) -->
+    <meta property="og:title" content="Rubbit Code Snippet">
+    <meta property="og:description" content="Check out this Ruby code snippet on Rubbit.">
+    <meta property="og:type" content="article">
+    <meta property="og:image" content="https://rubbit.dev/ogp.png">
+    <meta name="twitter:card" content="summary_large_image">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Outfit:wght@500;700&display=swap"
