feat: エディタの初期文言を更新し、ExamplesにDefault項目を追加

--- a/index.html
+++ b/index.html
@@ -175,6 +175,11 @@
               <div id="examples-menu"
                 class="absolute right-0 top-full mt-1 w-48 bg-white dark:bg-[#1C2128] rounded-md shadow-lg border border-slate-200 dark:border-white/10 py-1 hidden z-50 transform origin-top-right transition-all duration-100 ease-out">
                 <button
+                  class="w-full text-left px-4 py-2 text-sm text-slate-700 dark:text-slate-200 hover:bg-slate-100 dark:hover:bg-white/5 border-b border-slate-100 dark:border-white/5 font-semibold"
+                  data-key="default">
+                  Default
+                </button>
+                <button
                   class="w-full text-left px-4 py-2 text-sm text-slate-700 dark:text-slate-200 hover:bg-slate-100 dark:hover:bg-white/5"
                   data-key="hello">
                   Hello World
