--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
             <button
               class="inline-flex items-center gap-2 px-3 py-1.5 text-sm font-medium text-slate-600 dark:text-slate-300 hover:text-slate-900 dark:hover:text-white hover:bg-slate-100 dark:hover:bg-white/5 rounded-md transition-colors border border-transparent hover:border-slate-200 dark:hover:border-white/10"
-              title="About RubPad" onclick="document.getElementById('about-modal').showModal()">
+              title="About Rubbit" onclick="document.getElementById('about-modal').showModal()">
               <!-- icons/info.svg -->
               <svg class="w-4 h-4" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                 stroke="currentColor">
@@ -338,7 +338,7 @@
         <dialog id="about-modal"
           class="m-auto backdrop:bg-gray-900/50 dark:backdrop:bg-black/70 rounded-lg shadow-xl p-0 w-full max-w-lg bg-white dark:bg-[#161b22] dark:text-zinc-100">
           <div class="flex items-center justify-between px-6 py-4 border-b border-slate-200 dark:border-white/10">
-            <h3 class="text-lg font-semibold text-slate-900 dark:text-white">About RubPad</h3>
+            <h3 class="text-lg font-semibold text-slate-900 dark:text-white">About Rubbit</h3>
             <form method="dialog">
               <button class="text-slate-400 hover:text-slate-600 dark:hover:text-slate-200">
                 <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
@@ -401,7 +401,7 @@
               </div>
 
               <div class="pt-4 text-center border-t border-slate-200 dark:border-white/10">
-                <a href="https://github.com/sekito1107/RubPad" target="_blank"
+                <a href="https://github.com/sekito1107/Rubbit" target="_blank"
                   class="inline-flex items-center gap-2 text-slate-500 hover:text-slate-800 dark:hover:text-white transition-colors">
                   <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                     <path fill-rule="evenodd"
