るりまのライセンス表記（CC BY 3.0）を About モーダルに追記

--- a/index.html
+++ b/index.html
@@ -388,7 +388,9 @@
                 <h5 class="font-semibold text-slate-900 dark:text-white">Libraries & Credits</h5>
                 <ul class="list-disc list-inside space-y-1 ml-2">
                   <li><a href="https://docs.ruby-lang.org/ja/" target="_blank"
-                      class="text-blue-600 hover:underline">Ruby Reference Manual (るりま)</a> - API Documentation</li>
+                      class="text-blue-600 hover:underline">Ruby Reference Manual (るりま)</a> - API Documentation & Index
+                    Data (<a href="https://creativecommons.org/licenses/by/3.0/deed.ja" target="_blank"
+                      class="hover:underline">CC BY 3.0</a>)</li>
                   <li><a href="https://github.com/ruby/ruby.wasm" target="_blank"
                       class="text-blue-600 hover:underline">ruby.wasm</a> - Ruby Client-side Execution</li>
                   <li><a href="https://tailwindcss.com/" target="_blank" class="text-blue-600 hover:underline">Tailwind
