エンコードの誤りを修正

--- a/embed.html
+++ b/embed.html
@@ -3,14 +3,14 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>Rubbit Embed</title>
+    <title>Rubox Embed</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
     <!-- OGP / SEO (Embed) -->
-    <meta property="og:title" content="Rubbit Code Snippet">
-    <meta property="og:description" content="Check out this Ruby code snippet on Rubbit.">
+    <meta property="og:title" content="Rubox Code Snippet">
+    <meta property="og:description" content="Check out this Ruby code snippet on Rubox.">
     <meta property="og:type" content="article">
-    <meta property="og:image" content="https://rubbit.dev/ogp.png">
+    <meta property="og:image" content="https://rubox.dev/ogp.png">
     <meta name="twitter:card" content="summary_large_image">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -51,14 +51,14 @@
     <div id="footer"
       class="flex items-center justify-between px-3 bg-[#161b22] border-t border-white/10 text-xs select-none">
       <div class="flex items-center gap-2">
-        <!-- Rubbit Logo (Small) -->
-        <span class="font-logo font-bold text-gray-100 tracking-tight">Rubbit</span>
+        <!-- Rubox Logo (Small) -->
+        <span class="font-logo font-bold text-gray-100 tracking-tight">Rubox</span>
         <span class="text-slate-500">ReadOnly</span>
       </div>
 
       <a id="open-link" href="/" target="_blank" rel="noopener noreferrer"
         class="flex items-center gap-1 text-blue-400 hover:text-blue-300 transition-colors font-medium">
-        <span>Rubbitで開く</span>
+        <span>Ruboxで開く</span>
         <svg class="w-3 h-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
             d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path>
