--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Rubox</title>
     <meta http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self' 'unsafe-inline' 'wasm-unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://fonts.googleapis.com https://fonts.gstatic.com ws: wss:; img-src 'self' data: https://rubbit.vercel.app; worker-src 'self' blob:;">
+      content="default-src 'self'; script-src 'self' 'unsafe-inline' 'wasm-unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; connect-src 'self' https://fonts.googleapis.com https://fonts.gstatic.com ws: wss:; img-src 'self' data: https://rubox.vercel.app; worker-src 'self' blob:;">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="application-name" content="Rubox">
@@ -55,7 +55,7 @@
           class="h-14 border-b border-slate-200 dark:border-white/5 bg-white dark:bg-[#0D1117] flex items-center justify-between px-4 shrink-0 transition-colors">
           <div class="flex items-center gap-3">
             <div class="flex items-center gap-2">
-              <!-- icons/rubbit.svg -->
+              <!-- icons/rubox.svg -->
               <img src="/icon.svg" class="w-8 h-8" alt="Rubox Logo" />
               <span class="text-lg font-logo font-bold text-slate-800 dark:text-gray-100 tracking-tight">
                 Rubox
@@ -336,7 +336,7 @@
           <div class="px-6 py-4">
             <div class="space-y-4 text-sm text-slate-600 dark:text-slate-300">
               <div class="flex flex-col items-center justify-center p-4">
-                <!-- icons/rubbit.svg -->
+                <!-- icons/rubox.svg -->
                 <img src="/icon.svg" class="w-16 h-16 mb-2" alt="Rubox Logo" />
                 <h4 class="text-xl font-bold text-slate-900 dark:text-white font-logo">Rubox</h4>
                 <p class="text-slate-500">v0.1.0</p>
